# dxo

./: .gitignore  CMakeLists.txt  alsa_plugin.cpp  alsa_plugin.h  alsa_plugin_tests.cpp  coeffs.m  main.cpp  pcm_stream.h  pcm_stream_tests.cpp  plugin.cpp  tests.cpp  uniform_partition_convolution.m
crossover/: convolution.h  fft.h  fir_crossover.h  neon.h  test.cpp  tests.cpp
filter/: convolution.h  fft.h  fir_crossover.h  test.cpp
neon/: build_and_run.sh  test_neon.cpp
neon_tests/: build_and_run.sh  main.cpp  neon_tests.cpp
tasks/: tasks.h  test.cpp  thread_safe_list.h
